// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-radial-loading #render should render component as expected (1) 1`] = `
<gux-radial-loading>
  <div aria-live="polite" class="gux-modal gux-spinner-container" role="alert">
    <div class="gux-spin-circle"></div>
    <span class="gux-loading-alert">
      Loading...
    </span>
  </div>
</gux-radial-loading>
`;

exports[`gux-radial-loading #render should render component as expected (2) 1`] = `
<gux-radial-loading context="modal">
  <div aria-live="polite" class="gux-modal gux-spinner-container" role="alert">
    <div class="gux-spin-circle"></div>
    <span class="gux-loading-alert">
      Loading...
    </span>
  </div>
</gux-radial-loading>
`;

exports[`gux-radial-loading #render should render component as expected (3) 1`] = `
<gux-radial-loading context="full-page">
  <div aria-live="polite" class="gux-full-page gux-spinner-container" role="alert">
    <div class="gux-spin-circle"></div>
    <span class="gux-loading-alert">
      Loading...
    </span>
  </div>
</gux-radial-loading>
`;

exports[`gux-radial-loading #render should render component as expected (4) 1`] = `
<gux-radial-loading context="input">
  <div aria-live="polite" class="gux-input gux-spinner-container" role="alert">
    <div class="gux-spin-circle"></div>
    <span class="gux-loading-alert">
      Loading...
    </span>
  </div>
</gux-radial-loading>
`;
